objects/ASI_MFM_GL_Date_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ASI_MFM_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month__c</fullName>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>ASI MFM GL Date Setting</label>
</CustomObject>